// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewProjectPage should match snapshot (invited) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <div class="header-row">
      <div class="header-names">
        <h1>project name</h1>
      </div>
      <div class="header-buttons">
        <!---->
        <!---->
        <!---->
      </div>
      <mock-transition name="el-alert-fade">
        <div role="alert" class="el-alert el-alert--info">
          <i class="el-alert__icon el-icon-info is-big"></i>
          <div class="el-alert__content">
            <!---->
            <div style="padding: 0px 0px 20px 20px;">
              <p>
                You have been invited to join project name.
              </p>
              <div>
                <button type="button" class="el-button el-button--danger">
                  <!---->
                  <!----><span>
              Decline invitation
            </span></button>
                <button type="button" class="el-button el-button--primary">
                  <!---->
                  <!----><span>
              Join project
            </span></button>
              </div>
            </div>
            <i class="el-alert__closebtn el-icon-close" style="display: none;"></i>
          </div>
        </div>
      </mock-transition>
    </div>
    <div>
      <h2>Datasets</h2>
      <div class="dataset-list">
        <datasetitem-stub dataset="[object Object]" class="odd"></datasetitem-stub>
        <datasetitem-stub dataset="[object Object]" class="even"></datasetitem-stub>
        <datasetitem-stub dataset="[object Object]" class="odd"></datasetitem-stub>
        <datasetitem-stub dataset="[object Object]" class="even"></datasetitem-stub>
      </div>
      <div class="dataset-list-footer">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`ViewProjectPage should match snapshot (non-member) 1`] = `
<div class="page" mock-v-loading="false">
  <div class="page-content">
    <div class="header-row">
      <div class="header-names">
        <h1>project name</h1>
      </div>
      <div class="header-buttons">
        <button type="button" class="el-button el-button--primary">
          <!---->
          <!----><span>
          Request access
        </span></button>
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <div>
      <h2>Datasets</h2>
      <div class="dataset-list">
        <datasetitem-stub dataset="[object Object]" class="odd"></datasetitem-stub>
        <datasetitem-stub dataset="[object Object]" class="even"></datasetitem-stub>
        <datasetitem-stub dataset="[object Object]" class="odd"></datasetitem-stub>
      </div>
      <div class="dataset-list-footer">
        <a href="#/datasets?prj=00000000-1111-2222-3333-444444444444" class="">See all datasets</a>
      </div>
    </div>
  </div>
</div>
`;
